# xmpc

./: AUTHORS  Makefile  Makefile.in  commit.sh  config.h  config.h.in  config.status  configure  configure.in  libtool  xfmpc.desktop
po/: Makefile.in  POTFILES  ar.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  en_GB.gmo  es.gmo  eu.gmo  fi.gmo  (+11 more)
src/: Makefile  Makefile.am  Makefile.in  cover.c  cover.h  dbbrowser.c  etc.c  etc.h  extended-interface.c  extended-interface.h  interface.c  interface.h  lastfm.c  lists.c  lists.h  main-window.c  main-window.h  main.c  menu.c  menu.h  mpdclient.c  mpdclient.h  playlist.c  preferences-dialog.c  preferences.c  preferences.h  song-dialog.c  songinfo.c  songinfo.h  streams-dialog.c  streams.c  streams.h  tray.c
src/.deps/: xfmpc-cover.Po  xfmpc-dbbrowser.Po  xfmpc-etc.Po  xfmpc-extended-interface.Po  xfmpc-interface.Po  xfmpc-lastfm.Po  xfmpc-lists.Po  xfmpc-main-window.Po  xfmpc-main.Po  xfmpc-menu.Po  xfmpc-mpdclient.Po  xfmpc-playlist.Po  xfmpc-preferences-dialog.Po  xfmpc-preferences.Po  xfmpc-preferences.Tpo  xfmpc-song-dialog.Po  xfmpc-songinfo.Po  xfmpc-statusbar.Po  xfmpc-streams-dialog.Po  xfmpc-streams.Po  xfmpc-tray.Po  xfmpc-xfce-arrow-button.Po
src/.svn/: all-wcprops  entries
src/.svn/text-base/: cover.c.svn-base  dbbrowser.c.svn-base  etc.c.svn-base  etc.h.svn-base  extended-interface.c.svn-base  interface.c.svn-base  lists.c.svn-base  main-window.c.svn-base  main.c.svn-base  menu.c.svn-base  mpdclient.c.svn-base  mpdclient.h.svn-base  playlist.c.svn-base  preferences-dialog.c.svn-base  preferences.c.svn-base  preferences.h.svn-base  song-dialog.c.svn-base  songinfo.c.svn-base  streams-dialog.c.svn-base  streams-dialog.h.svn-base  streams.c.svn-base  tray.c.svn-base  tray.h.svn-base
(+29 files in other folders)
